--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </ul>
 
     <footer>
-        <p> © Jane N. Kharma. All rights reserved. Everything here is exaggerated. Just for Fun.</p>
+        <p> © Jane N. Kharma. All rights reserved. Just for Fun.</p>
     </footer>
 
 </body>
