--- a/contactme.html
+++ b/contactme.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Contact Details</h1>
-    <h3><i>If you have dimples, let's grab a coffee. Here's how to reach me. But I only drink Arabica coffee. It must be hot latte with no sugar because I'm better than everyone. </i></h3>
+    <h3><i>If you have dimples, let's talk and have coffee. Here's how to reach me. But I only drink Arabica coffee. It must be hot latte with no sugar because I'm better than everyone. </i></h3>
     <p><strong>Telegram:</strong> @ julietalphanancyecho</p>
 </body>
 </html>
