--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li>Australian Open Champion 20xx</li>
 
     </ul>    
-    <h2>Other</h2>
+    <h2>More About Me</h2>
     <ul>
         <li><a href="./hobbies.html">My Hobbies</a></li>
         <li><a href="./contactme.html">Contact Me</a></li>
