--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <hr>
     <h2>Education</h2>
     <ul>
-        <li>Doctor of Cybersecurity, University of New Castle (xxx3-xxx5)</li>
-        <li>Master in Information Technology, The University of Melbourne (xxx6-xxx9)</li>
-        <li>Bachelor of Science in Information Technology, AMA Computer College (xxx2-xxx5)</li>
-        <li>Bachelor of Science in Medical Technology, <i>magna cum laude, </i>San Pedro College (xxx7-xxx1)</li>
+        <li>Doctor of Cybersecurity, University of New Castle (xxx3-xxxx)</li>
+        <li>Master in Information Technology, The University of Melbourne (xxx6-xxxx)</li>
+        <li>Bachelor of Science in Information Technology, AMA Computer College (xxx2-xxxx)</li>
+        <li>Bachelor of Science in Medical Technology, <i>magna cum laude, </i>San Pedro College (xxx7-xxxx)</li>
     </ul>
     <hr>
     <h2>Work Experience</h2>
